syntax = "proto3";

package scheduler;

option go_package = "github.com/Georgi-Progger/proto/scheduler;scheduler";


service SchedulerSService {
    rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
}

message CreateJobRequest {
  int32 hour = 1;
  int32 minute = 2;
}

message CreateJobResponse {
  string job_id = 1;
}